# DMARC-Report-Manager

./: .dockerignore  .env.example  .gitignore  API.md  DEVELOPMENT_STATE.md  Dockerfile  Dockerfile.frontend  README.md  TODO.md  conftest.py  dmarc_reports.db  docker-compose.yml  main.py  pyproject.toml  test_upload_logic.py
.github/workflows/: ci.yml
backend/dmarc_lib/: alerts.py  db.py  db.py.bak  email_fetch.py  enrichment.py  parser.py  pdf_gen.py
backend/uploads/: comcast.net!secure.200permits.com!1766188800!1766275200.xml  comcast.net!secure.200permits.com!1767139200!1767225600.xml  google.com!secure.200permits.com!1766361600!1766447999.xml  google.com!secure.200permits.com!1766448000!1766534399.xml  protection.outlook.com!200permits.com!1766016000!1766102400.xml  protection.outlook.com!secure.200permits.com!1766016000!1766102400.xml  protection.outlook.com!secure.200permits.com!1766102400!1766188800.xml  protection.outlook.com!secure.200permits.com!1766361600!1766448000.xml  protection.outlook.com!secure.200permits.com!1766448000!1766534400.xml  protection.outlook.com!secure.200permits.com!1767052800!1767139200.xml  protection.outlook.com!secure.200permits.com!1767484800!1767571200.xml  yahoo.com!bluesun.net!1766188800!1766275199.xml
backend/web/: api.py  config.py
docs/: DESIGN_GUIDELINES.md
frontend/: index.html  package.json  playwright.config.js  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css
scripts/: dmarc-backend.service  dmarc-frontend.service
tests/: repro_search.py  test_api.py  test_parser.py
(+12 files in other folders)
