[project]
name = "dmarc-report-manager"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dnspython>=2.8.0",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.21",
    "uvicorn>=0.40.0",
    "xmltodict>=1.0.2",
]
